tests/ui/consts/static-cycle-error.stderr
error[E0080]: encountered static that tried to access itself during initialization
  --> $DIR/static-cycle-error.rs:6:15
   |
LL |     foo: Some(&FOO),
   |               ^^^^ evaluation of `FOO` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
